[FIX] sap.m.Select: Fixed wrong height when used in sap.uxap.ObjectPageHeaderContent
Problem:
sap.m.Select have fixed height when it is used inside sap.uxap.ObjectPageHeaderContent
which was applied in Cozy and Compact mode which leads to visual misalignment

BCP: 2170215532
Fixes: https://github.com/SAP/openui5/issues/3348

--- a/src/sap.uxap/src/sap/uxap/themes/base/ObjectPageHeaderContent.less
+++ b/src/sap.uxap/src/sap/uxap/themes/base/ObjectPageHeaderContent.less
@@ -134,20 +134,6 @@
 				width: 100% !important;
 			}
 		}
-		.sapMSlt {
-			height: 1.625rem;
-			margin-top: 0.1875rem;
-			margin-bottom: 0.1875rem;
-			.sapMSltLabel {
-				line-height: 1.5rem;
-				padding-right: 2.5rem;
-				padding-left: 0.5rem;
-			}
-			.sapMSltArrow {
-				width: 2rem;
-				line-height: 1.625rem;
-			}
-		}
 	}
 
 	.sapUxAPObjectPageHeaderLayoutHiddenL,
